--- a/CSS/start.css
+++ b/CSS/start.css
@@ -1,9 +1,3 @@
-section {
-    border: red solid 3px;
-    width: 100%;
-    height: 100%;
-}
-
 header > div {
     height: var(--distance-8)
 }
@@ -15,7 +9,9 @@ header > div {
 .bg-slideshow {
     background-image: url(/images/proffeee.png);
     background-size: 100vw 100vh;
-    background-position: 50% 50%;
+    background-position: cover;
+    height: 100vh;
+    
 }
 
 .overflow-hidden {
@@ -35,11 +31,11 @@ header > div {
 }
 
 .position-relative{
-    position: relative;
+    position: relative !important;
 }
 
 .position-absolute {
-    position: absolute;
+    position: absolute !important;
 }
 
 .slide-img {
@@ -72,9 +68,9 @@ body {
     box-sizing: border-box;
 }
 
-.centerXY {
-    justify-content: center;
-    align-items: center;
+.centerXY { 
+    left: 50%;
+    top: 50%;
 }
 
 .centerX {
@@ -90,3 +86,17 @@ body {
 
 /*fonts*/
 .Kanit { font-family: Kanit; }
+
+.fa-dolly {
+    font-size: var(--distance-9);
+    color: var(--orange);
+    border: 1px solid white;
+    /* text-shadow: 0px 0px 3px white;   */
+    
+}
+
+.fa-circle {
+    background-color: var(--dark-transp);
+    padding: 12%;
+    border-radius: 50%;
+}
