--- a/CSS/module.css
+++ b/CSS/module.css
@@ -18,13 +18,14 @@
     height: 100%;
     width: 400vw;
     position: absolute;
-    border: 1px solid chartreuse;
     z-index: -1;
+    background-color: black;
 }
 
 .slideshow__image {
     width: 25%;
     height: 100%;
+    opacity: 0.9;
 }
 
 
@@ -36,9 +37,9 @@
     align-items: center;
     justify-content: space-between;
     padding: 1.5rem;
-    border: 1px solid white;
+    border: 1px solid var(--white);
     background: rgba(0, 0, 0, 0.15);
-    color: white;
+    color: var(--white);
     text-transform: uppercase;
     font-family: 'Bebas Neue', cursive;
 }
@@ -66,3 +67,40 @@
 .logo > span {
     color: orange;
 }
+
+.fa-cart-plus {
+    font-size: 1.75rem;
+}
+
+.icon-div {
+    background: rgba(0, 0, 1, 0.15);
+    position: relative;
+    padding: .75rem;
+    border-radius: 50%;
+    border: 2px solid orange;
+    box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.637);
+}
+
+.emblem {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: .75rem;
+    position: absolute;
+    color: rgb(92, 92, 92);
+    right: 0px;
+    top: 0px;
+    background-color: var(--white);
+    width: 1rem;
+    height: 1rem;
+    border: 1.5px solid orange;
+    border-radius: 50%;
+    transform: translate(3px, -3px);
+}
+/* .circle {
+    background: rgba(0, 0, 1, 0.15);
+    padding: .75rem;
+    border-radius: 50%;
+    border: 2px solid orange;
+    box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.637);
+} */
