--- a/CSS/layout.css
+++ b/CSS/layout.css
@@ -14,7 +14,6 @@ section {
     flex-direction: column;
     width: 100%;
     height: 100vh;
-    border: 2px solid red;
 }
 
 /* section > div {
@@ -31,21 +30,23 @@ section {
     position: absolute;
     background-color: rgba(0, 0, 0, 0.25);
     padding: .75rem;
-    border: 1px solid black;
+    box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.25);
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: white;
+    color: var(--white);
 }
 
 .welcome-tag > div {
     text-transform: uppercase;
-    color: white;
+    /* text-shadow: 1px 1px 20px 20px green; */
+    color: var(--white);
     font-size: 3rem;
     font-family: 'Bebas Neue', cursive;
     font-weight: 1100;
-    -webkit-text-stroke-color: black;
+    -webkit-text-stroke-color: rgba(0, 0, 0, 0.623);
     -webkit-text-stroke-width: .5px;
+    
 }
 
 .welcome-tag span {
