--- a/CSS/layout.css
+++ b/CSS/layout.css
@@ -13,7 +13,7 @@ section {
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 100vh;
+    /* height: 100vh; */
 }
 
 /* section > div {
