--- a/CSS/shame.css
+++ b/CSS/shame.css
@@ -14,6 +14,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 0px 0.5rem;
 }
 
 .guide-container h1 {
@@ -43,6 +44,7 @@
 .flex-c {
     display: flex;
     flex-direction: column;
+    margin-bottom: 1rem;
 }
 
 .flex {
